examples/type_system/failing/136_tuple_projection_precise_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let value: Int = (1, "s").1
}
